--- a/src/components/Singup/style.css
+++ b/src/components/Singup/style.css
@@ -17,3 +17,19 @@
     align-items: center;
     justify-content: center;
 }
+
+.login {
+    background-color: rgb(84,57,162);
+    color: white;
+    border-radius: 15px;
+    margin-right: 20px;
+    border: none;
+}
+
+.logout {
+    background-color: rgb(255,97,35);
+    color: white;
+    border-radius: 15px;
+    margin-right: 20px;
+    border: none;
+}
