--- a/src/components/Plate/style.css
+++ b/src/components/Plate/style.css
@@ -6,9 +6,14 @@
 
 .plate-img {
     width: 100%;
-    height: 150px;
+    height: 130px;
     border-radius: 20px;
     margin-top: 30px;
+}
+
+.text-time {
+    margin: 0px;
+    padding: 0px;
 }
 
 .plate-text {
@@ -41,4 +46,24 @@
 
 .plate-price {
     color: rgb(189, 186, 186);
+}
+
+@media screen and (max-width: 650px) {
+    .plate-img {
+        height: 100%;
+    }
+
+    .plate-time {
+        height: 10px;
+    }
+
+    .text-time {
+        font-size: 9px;
+        padding: 0px;
+        margin: 0px;
+    }
+
+    .plate-text {
+        display: none;
+    }
 }
